--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -7,25 +7,64 @@
     flex-direction: column;
     align-items: center;
     .txt-hero {
-      text-align: center;
-      margin-bottom: 40px;
-      h3.txt-primary {
-        margin-bottom: 0.8rem;
-        font-weight: 600;
-        font-size: 2.4rem;
-        line-height: 130%;
-        color: $title;
-      }
-      h3.txt-secondary {
-        margin-bottom: 0.8rem;
+      margin-bottom: 4rem;
+      display: flex;
+      .txt-secondary {
         font-weight: 500;
         font-size: 2.4rem;
         line-height: 133%;
         color: $sub-title-home;
-        span {
-          color: $sub-title-resume;
+      }
+      .option {
+        margin-left: 1rem;
+        height: 3rem;
+        line-height: 3rem;
+        overflow: hidden;
+      }
+
+      .option li {
+        list-style: none;
+        color: $sub-title-resume;
+        font-size: 2.4rem;
+        font-weight: 500;
+        position: relative;
+        top: 0;
+        animation: slide 12s steps(4) infinite;
+      }
+
+      @keyframes slide {
+        100% {
+          top: -12rem;
         }
       }
+
+      .option li span {
+        position: relative;
+        margin: 0.5rem 0;
+        line-height: 3rem;
+      }
+
+      .option li span:after {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #f9f9f9;
+        border-left: 0.2rem solid $sub-title-resume;
+        animation: typing 3s steps(40) infinite;
+      }
+
+      @keyframes typing {
+        40%,
+        60% {
+          left: calc(100% + 0.2rem);
+        }
+        100% {
+          left: 0;
+        }
+      }
+
       p {
         color: $sub-title-home;
 
