--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -8,12 +8,31 @@
     align-items: center;
     .txt-hero {
       margin-bottom: 4rem;
-      display: flex;
+      .txt-change{
+        display: flex;
+        p {
+          font-weight: 500;
+          font-size: 2.4rem;
+          line-height: 133%;
+          color: $sub-title-home;
+          text-align: center;
+        }
+      }
+      .txt-primary {
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 130%;
+        color: $title;
+        text-align: center;
+      }
       .txt-secondary {
+        display: flex;
+        h3 {
         font-weight: 500;
         font-size: 2.4rem;
         line-height: 133%;
         color: $sub-title-home;
+        text-align: center;
       }
       .option {
         margin-left: 1rem;
@@ -64,10 +83,19 @@
           left: 0;
         }
       }
+      }
+      .textFixed {
+        h3 {
+          font-weight: 500;
+          font-size: 2.4rem;
+          line-height: 133%;
+          color: $sub-title-home;
+          text-align: center;
+        }
+      }
 
       p {
         color: $sub-title-home;
-
         font-weight: 500;
         font-size: 1.8rem;
         line-height: 150%;
