Fix: s-resume (title and courses)

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,6 +7,7 @@ $title-resume-projects: #3F4041;
 $sub-title-home: #C1C3C8;
 $sub-title-resume: #5D5FEF;
 $text-about: #7B7B7B;
+$span-resume-color: #9B9B9B;
 
 $brand-neo-market: #EDFAE5;
 $brand-bb: #E4E8FF;
