--- a/scss/_resume.scss
+++ b/scss/_resume.scss
@@ -54,7 +54,6 @@
             :not(:first-child) {
               margin-bottom: 4rem;
             }
-
             h4 {
               font-weight: 600;
               font-size: 1.8rem;
@@ -69,7 +68,8 @@
               color: $span-resume-color;
             }
             p {
-              padding-top: 1.2rem;
+              margin-top: 1.2rem;
+              margin-bottom: 4rem;
               font-weight: 500;
               font-size: 1.6rem;
               line-height: 130%;
