Update info-resume details

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'grid';
 @import 'header';
 @import 'components';
+@import 'patterns';
 @import 'resume';
 @import 'about';
 @import 'home';
