--- a/scss/_patterns.scss
+++ b/scss/_patterns.scss
@@ -3,6 +3,10 @@
       padding-top: 1.2rem;
       h3 {
         margin-bottom: 1.6rem;
+        font-weight: 800;
+        font-size: 2.4rem;
+        line-height: 130%;
+        color: $title-resume-projects;
       }
       .education,
       .contact-details,
