--- a/scss/_neo.scss
+++ b/scss/_neo.scss
@@ -1,13 +1,14 @@
 header {
     margin-top: 0;
     width: 100%;
-    height: 32.5rem;
+    max-width: 4600px;
+    height: 325px;
+    overflow: hidden;
     .banner {
-        
-    }
-    .header-project {
-        display: flex;  
-        align-items: center;
-        justify-content: center;
+        margin-right: auto;
+        margin-left: auto;
+        background-color: transparent;
+
+     
     }
 }
