--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -34,7 +34,7 @@
             text-align: center;
           }
           .option {
-            margin-left: 1rem;
+            margin-left: 0.9rem;
             height: 3rem;
             line-height: 3rem;
             overflow: hidden;
@@ -59,8 +59,10 @@
             line-height: 3rem;
           }
           .option li span:after {
-            content: "";
+            content: "design";
+            color: $sub-title-home;
             position: absolute;
+            padding-left: 0.2rem;
             left: 0;
             width: 100%;
             height: 100%;
@@ -78,15 +80,15 @@
             }
           }
         }
-        .textFixed {
-          h3 {
-            font-weight: 500;
-            font-size: 2.4rem;
-            line-height: 133%;
-            color: $sub-title-home;
-            text-align: center;
-          }
-        }
+        // .textFixed {
+        //   h3 {
+        //     font-weight: 500;
+        //     font-size: 2.4rem;
+        //     line-height: 133%;
+        //     color: $sub-title-home;
+        //     text-align: center;
+        //   }
+        // }
       }
 
       p {
